# scraper-mcp

./: .env.example  .gitignore  2025-10-31-release.txt  Dockerfile  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/: API.md  CONFIGURATION.md  DASHBOARD.md  DEVELOPMENT.md
src/scraper_mcp/: __main__.py  cache.py  cache_manager.py  metrics.py  server.py  utils.py
src/scraper_mcp/admin/: router.py  service.py
src/scraper_mcp/core/: providers.py
src/scraper_mcp/dashboard/templates/: dashboard.html
src/scraper_mcp/models/: links.py  perplexity.py  scrape.py
src/scraper_mcp/prompts/: __init__.py  analysis.py  research.py  router.py  seo.py
src/scraper_mcp/providers/: __init__.py  playwright_provider.py  requests_provider.py
src/scraper_mcp/resources/: __init__.py  cache.py  config.py  router.py  server_info.py
src/scraper_mcp/services/: __init__.py  perplexity_service.py
src/scraper_mcp/tools/: __init__.py  router.py  service.py
tests/: test_perplexity.py  test_providers.py  test_server.py  test_utils.py
