[project]
name = "scraper-mcp"
version = "0.4.0"
description = "MCP server for web scraping functionality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "diskcache>=5.6.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
perplexity = [
    "perplexityai>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "perplexityai>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=scraper_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "asyncio: mark test as async",
]
